arrumando btn-copiar/readme

--- a/index.html
+++ b/index.html
@@ -53,14 +53,13 @@
             <span>;</span>
         </div>
         
-        <button class="btn btn-copiar">Copiar</button>
+        <button data-copiar="btnCopiar" class="btn btn-copiar">Copiar</button>
     </div>
     <div class="container-unidade">
         <button class="btn btn-unidade">%</button>
         <button class="btn btn-unidade">px</button>
         <button class="btn btn-unidade">rem</button>
     </div>
-    <!-- <img src="/assets/example.png" > -->
 
     <script src="/script.js"></script>
     <script src="https://kit.fontawesome.com/73b3f70564.js" crossorigin="anonymous"></script>
